DatePicker: resolve overlapping issue && added border color

--- a/src/components/OrderForm/style.scss
+++ b/src/components/OrderForm/style.scss
@@ -1,10 +1,14 @@
 @import "../../variables.scss";
 
 .hfui-orderform__wrapper {
+  .react-datepicker__tab-loop {
+    position: relative;
+  }
+
   .react-datepicker-popper {
     left: -2px;
-    transform: translate3d(0px, 231px, 0px) !important;
-    margin-top: 35px;
+    transform: translate(0px, 5px) !important;
+    margin-top: 0px;
     margin-left: 15px;
   }
 
@@ -331,6 +335,10 @@
   display: inline-block;
   vertical-align: middle;
   margin: 0 0 16px 0;
+
+  .hfui-datepicker{
+    border: 1px solid $black-color;
+  }
 
   input[type="range"] {
     width: 100%;
